mostly done, need to clear rendered images

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <img src="" alt="">
           <p></p>
         </section>
-        <a href="#" id="previous-page">Previous Page</a>
-        <a href="#" id="next-page">Next Page</a>
+        <a href="#" id="previous-page" class="page-link">Previous Page</a>
+        <a href="#" id="next-page" class="page-link">Next Page</a>
       </main>
       <footer>
         &copy; 2018 Code Fellows
