--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/0-reset.css">
-    <link rel="stylesheet" href="css/1-base.css">
-    <link rel="stylesheet" href="css/2-layout.css">
-    <link rel="stylesheet" href="css/3-modules.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/0-reset.css">
+  <link rel="stylesheet" href="css/1-base.css">
+  <link rel="stylesheet" href="css/2-layout.css">
+  <link rel="stylesheet" href="css/3-modules.css">
+  <script id="photo-template" type="text/x-handlebars-template">
+    <section class="{{keyword}}">
+      <h2>{{title}}</h2>
+      <img src="{{image_url}}" alt="{{keyword}}">
+      <p>{{description}}</p>
+    </section>
+  </script>
 </head>
+
 <body>
-    <header>
-        <h1>The Gallery of Horns</h1>
-        <select>
-          <option value="default">Filter by Keyword</option>
-        </select>
-      </header>
-      <main>
-        <section id="photo-template">
-          <h2></h2>
-          <img src="" alt="">
-          <p></p>
-        </section>
-        <a href="#" id="previous-page" class="page-link">Previous Page</a>
-        <a href="#" id="next-page" class="page-link">Next Page</a>
-      </main>
-      <footer>
-        &copy; 2018 Code Fellows
-      </footer>
-<script   src="http://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+  <header>
+    <h1>The Gallery of Horns</h1>
+    <select>
+      <option value="default">Filter by Keyword</option>
+    </select>
+    <a href="#" id="previous-page" class="page-link">Previous Page</a>
+    <a href="#" id="next-page" class="page-link">Next Page</a>
+  </header>
+  <main>
+    <!-- TODO: remove later once all working -->
+    <!-- <section id="photo-template">
+      <h2></h2>
+      <img src="" alt="">
+      <p></p>
+    </section> -->
+  </main>
+  <footer>
+    &copy; 2018 Code Fellows
+  </footer>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
