--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="#" id="previous-page" class="page-link">Previous Page</a>
     <a href="#" id="next-page" class="page-link">Next Page</a>
     <a href="#" id="by-horns" class="sort-link">Sort by Number of Horns</a>
-    <a href="#" id="by-name" class="sort-link">Sort by Name</a>
+    <a href="#" id="by-title" class="sort-link">Sort by Name</a>
   </header>
   <main>
     <!-- Empty by design -->
